<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about" android:orientation="vertical">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="16dp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:src="@color/black"/>
    <TextView
        android:text="@string/namaku"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/siswa_dicoding"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"/>

    <TextView
        android:id="@+id/cp_ilham"
        android:text="@string/contact_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:textSize="17sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:orientation="horizontal"
            android:background="@drawable/red_grad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/akun"
                android:textColor="@color/white"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>